HTML changes version 2

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,4 +6,5 @@
     <li>Be consistent</li>
     <li>Stay Hungry</li>
     <li>FOLLOW THE PROCESS!!!! - Give Zaire his credit!!</li>
+    <li>LEVEL UP IN TECH ROCKS!!!!!</li>
 </ol>
